--- a/src/components/sections/EducationSection.astro
+++ b/src/components/sections/EducationSection.astro
@@ -1,7 +1,7 @@
 ---
 import type { CollectionEntry } from "astro:content";
-import Section from "../ui/Section.astro";
-import Experience from "../ui/Experience.astro";
+import Section from "@/components/ui/Section.astro";
+import Experience from "@/components/ui/Experience.astro";
 
 type Props = CollectionEntry<"main">["data"]["education"];
 
