--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,8 +1,8 @@
 ---
 import { getCollection } from "astro:content";
-import PageFooter from "../components/sections/PageFooter.astro";
-import HeroSection from "../components/sections/HeroSection.astro";
-import Navbar from "../components/sections/Navbar.astro";
+import PageFooter from "@/components/sections/PageFooter.astro";
+import HeroSection from "@/components/sections/HeroSection.astro";
+import Navbar from "@/components/sections/Navbar.astro";
 
 const locale = Astro.currentLocale;
 
