--- a/src/components/sections/ContactsSection.astro
+++ b/src/components/sections/ContactsSection.astro
@@ -5,7 +5,7 @@
 */
 
 import type { CollectionEntry } from "astro:content";
-import Section from "../ui/Section.astro";
+import Section from "@/components/ui/Section.astro";
 
 type Props = CollectionEntry<"main">["data"]["contacts"];
 
