--- a/src/components/sections/Navbar.astro
+++ b/src/components/sections/Navbar.astro
@@ -1,31 +1,42 @@
 ---
-import { useTranslations } from '../../i18n/ui';
+import { useTranslations } from "../../i18n/ui";
 import BarHero from "../BarHero.astro";
 const t = useTranslations(Astro.currentLocale);
 
 const { active } = Astro.props;
 
-const textPrimaryColor = 'text-secondary-foreground font-semibold';
+const textPrimaryColor = "text-secondary-foreground font-semibold";
 
 const locale = Astro.currentLocale;
 const cvLink = `./${locale}`;
 const portfolioLink = `./${locale}/portfolio`;
 ---
 
-
-<div class:list={[
-  "px-container bg-accent h-12 md:h-10 sticky top-0 z-50",
-  "lg:(grid grid-cols-[1fr_4fr] gap-x-1.5rem items-center)"
-]}>
+<div
+  class:list={[
+    "px-container bg-accent h-12 md:h-10 sticky top-0 z-50",
+    "lg:(grid grid-cols-[1fr_4fr] gap-x-1.5rem items-center)",
+  ]}
+>
   <div class="md:(grid col-start-2 col-end-3 grid-cols-[1fr_auto]) h-full">
     <nav class="h-full flex items-center -ml-3">
-      <div class="dark:md:hover:bg-backplate md:hover:bg-mute-foreground h-full flex items-center px-3">
-          <a class:list={[active === 'cv' && textPrimaryColor, "text-mute"]} href={cvLink}>{t('tabs.cv.title')}</a>
+      <div
+        class="dark:md:hover:bg-backplate md:hover:bg-mute-foreground h-full flex items-center px-3"
+      >
+        <a
+          class:list={[active === "cv" && textPrimaryColor, "text-mute"]}
+          href={cvLink}>{t("tabs.cv.title")}</a
+        >
       </div>
-      <div class="dark:md:hover:bg-backplate md:hover:bg-mute-foreground h-full flex items-center px-3">
-          <a class:list={[active === 'portfolio' && textPrimaryColor, "text-mute"]} href={portfolioLink}>{t('tabs.portfolio.title')}</a>
+      <div
+        class="dark:md:hover:bg-backplate md:hover:bg-mute-foreground h-full flex items-center px-3"
+      >
+        <a
+          class:list={[active === "portfolio" && textPrimaryColor, "text-mute"]}
+          href={portfolioLink}>{t("tabs.portfolio.title")}</a
+        >
       </div>
     </nav>
-      <BarHero />
+    <BarHero />
   </div>
 </div>
