--- a/src/components/sections/SkillsSection.astro
+++ b/src/components/sections/SkillsSection.astro
@@ -1,6 +1,6 @@
 ---
-import Section from "../ui/Section.astro";
-import SkillList from "../ui/SkillList.astro";
+import Section from "@/components/ui/Section.astro";
+import SkillList from "@/components/ui/SkillList.astro";
 import type { CollectionEntry } from "astro:content";
 
 type Props = CollectionEntry<"main">["data"]["skills"];
@@ -8,13 +8,17 @@ type Props = CollectionEntry<"main">["data"]["skills"];
 const { title, list } = Astro.props;
 ---
 
-<Section title={title} >
+<Section title={title}>
   <div class="grid gap-y-6 print:gap-y-0">
-    {list.map((item) => (
-      <div class="grid gap-y-2 print:gap-0">
-        <h3 class="font-semibold print:print:text-sm whitespace-nowrap">{item.title}</h3>
-        <SkillList skills={item.list} />
-      </div>
-    ))}    
+    {
+      list.map((item) => (
+        <div class="grid gap-y-2 print:gap-0">
+          <h3 class="font-semibold print:print:text-sm whitespace-nowrap">
+            {item.title}
+          </h3>
+          <SkillList skills={item.list} />
+        </div>
+      ))
+    }
   </div>
 </Section>
