--- a/src/components/sections/WorksSection.astro
+++ b/src/components/sections/WorksSection.astro
@@ -1,7 +1,7 @@
 ---
 import type { CollectionEntry } from "astro:content";
-import Section from "../ui/Section.astro";
-import Experience from "../ui/Experience.astro";
+import Section from "@/components/ui/Section.astro";
+import Experience from "@/components/ui/Experience.astro";
 
 type Props = CollectionEntry<"main">["data"]["works"];
 
@@ -9,7 +9,5 @@ const { title, list } = Astro.props;
 ---
 
 <Section title={title}>
-	<Experience list={list} />
+  <Experience list={list} />
 </Section>
-
-
