--- a/src/components/ui/HeroBarItem.astro
+++ b/src/components/ui/HeroBarItem.astro
@@ -6,9 +6,11 @@ interface Props {
 const { classList } = Astro.props;
 ---
 
-<div class:list={[
-  "h-full w-full min-w-10 flex justify-center items-center rounded-sm dark:md:hover:bg-backplate md:hover:bg-mute-foreground",
-  classList && classList
-]}>
+<div
+  class:list={[
+    "h-full w-full min-w-10 flex justify-center items-center rounded-sm dark:md:hover:bg-backplate md:hover:bg-mute-foreground",
+    classList && classList,
+  ]}
+>
   <slot />
 </div>
