--- a/src/components/ui/SkillList.astro
+++ b/src/components/ui/SkillList.astro
@@ -1,21 +1,30 @@
 ---
 interface Props {
-	skills: string[];
-	className?: string;
+  skills: string[];
+  className?: string;
 }
 
 const { skills, className } = Astro.props;
 ---
 
-<ul class:list={[ 
-	"flex flex-wrap gap-x-2 gap-y-2", 
-	"print:gap-y-0.5",
-	className && className]}>
-	{skills.map((skill, index) => (
-		<li class:list={[
-			"bg-backplate whitespace-nowrap text-normal py-1 px-2 rounded-sm text-sm",
-			"print:(p-0)",
-			(index != skills.length - 1) && "print:after:content-[',']"
-		]}>{skill}</li>
-	))}
+<ul
+  class:list={[
+    "flex flex-wrap gap-x-2 gap-y-2",
+    "print:gap-y-0.5",
+    className && className,
+  ]}
+>
+  {
+    skills.map((skill, index) => (
+      <li
+        class:list={[
+          "bg-backplate whitespace-nowrap text-normal py-1 px-2 rounded-sm text-sm",
+          "print:(p-0)",
+          index != skills.length - 1 && "print:after:content-[',']",
+        ]}
+      >
+        {skill}
+      </li>
+    ))
+  }
 </ul>
