--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import ResumeLayout from "../layouts/ResumeLayout.astro";
+import ResumeLayout from "@/layouts/ResumeLayout.astro";
 ---
 
 <ResumeLayout />
