--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -1,5 +1,5 @@
 ---
-import PortfolioLayout from "../layouts/PortfolioLayout.astro";
+import PortfolioLayout from "@/layouts/PortfolioLayout.astro";
 ---
 
 <PortfolioLayout />
